# prypy

./: LICENSE  README.md  pyproject.toml
src/prypy/: __init__.py  models.py  reader.py  utils.py
tests/: conftest.py  test_utils.py
