[tool.poetry]
name = "prypy"
version = "0.1.0"
description = "Trace Python programs."
authors = ["Hansen <hansen@sidratresearch.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
